--- a/requirements.txt
+++ b/requirements.txt
@@ -165,3 +165,4 @@ pyobjc-framework-WebKit==10.3.1
 setuptools==70.2.0
 tabulate==0.9.0
 wcwidth==0.2.13
+wheel @ file:///opt/homebrew/Cellar/python%403.12/3.12.4/libexec/wheel-0.43.0-py3-none-any.whl#sha256=ff23205a590f2b902a2a21151019e96b93ab4a1409d7c9748b6bd210f4c0f44d
